--- a/patchseq/E-clusters/InN_Ephysi_Classifier_wo_position.ipynb
+++ b/patchseq/E-clusters/InN_Ephysi_Classifier_wo_position.ipynb
@@ -26,7 +26,7 @@
     "import sklearn.cluster as cluster\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "os.chdir('E:/final_dataset/')"
+    "os.chdir('../final_dataset/')"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('CN_patchseq_Ephysi_metaInformation_integrated_20230207.csv')"
+    "data = pd.read_csv('CN_patchseq_Ephysi_metaInformation_integrated.csv')"
    ]
   },
   {
