--- a/patchseq/M-clusters/ExN_Mor_classifier.ipynb
+++ b/patchseq/M-clusters/ExN_Mor_classifier.ipynb
@@ -26,7 +26,7 @@
     "import sklearn.cluster as cluster\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "os.chdir('E:/final_dataset/')"
+    "os.chdir('../final_dataset/')"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('F:/cn_dataset/Morpholoy_data.csv')"
+    "data = pd.read_csv('Morpholoy_data.csv')"
    ]
   },
   {
