--- a/patchseq/M-clusters/InN_Mor_classifier.ipynb
+++ b/patchseq/M-clusters/InN_Mor_classifier.ipynb
@@ -26,7 +26,7 @@
     "import sklearn.cluster as cluster\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "os.chdir('E:/final_dataset/')"
+    "os.chdir('../final_dataset/')"
    ]
   },
   {
